--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "gulp-cache": "^1.1.3",
     "gulp-image-resize": "^0.13.1",
     "gulp-imagemin": "^7.1.0",
-    "imagemin-jpeg-recompress": "^6.0.0"
+    "imagemin-jpeg-recompress": "^6.0.0",
+    "imagemin-pngquant": "^8.0.0"
   }
 }
