--- a/package.json
+++ b/package.json
@@ -26,7 +26,12 @@
     "gulp-cache": "^1.1.3",
     "gulp-image-resize": "^0.13.1",
     "gulp-imagemin": "^7.1.0",
+    "gulp-imagemin-fix": "^5.0.4",
+    "gulp-plumber": "^1.2.1",
     "imagemin-jpeg-recompress": "^6.0.0",
     "imagemin-pngquant": "^8.0.0"
+  },
+  "dependencies": {
+    "concurrent-transform": "^1.0.0"
   }
 }
